# sdlc-harness

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  run_harness.py
sdlc_harness/: __init__.py  __main__.py  artifacts.py  changeplan.py  cli.py  config.py  detector.py  guardrails.py  interview.py  logging_util.py  orchestrator.py  stages.py  state.py
sdlc_harness/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
sdlc_harness/prompts/: implement.md  prd.md  requirements.md  test.md  trd.md
tests/: test_core.py  test_orchestrator.py
